gateway/lb-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
